--- a/example.config.yml
+++ b/example.config.yml
@@ -25,6 +25,10 @@ temperature:
       gpio: 22
 
 system:
+   
+   # Read basic metrics: cpu, memory, etc
+   read_basic: True
+
    # will read RPI specific values
    is_pi: false
    
