--- a/example.tempmqtt.service
+++ b/example.tempmqtt.service
@@ -4,7 +4,7 @@ After=network-online.target
 
 [Service]
 User=root
-ExecStart=/opt/tempmqtt/venv/bin/python3 tempmqtt.py -c config.yml
+ExecStart=/opt/tempmqtt/venv/bin/python3 tempmqtt.py -f config.yml
 WorkingDirectory=/opt/tempmqtt
 Restart=on-failure
 RestartSec=5
