--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Adafruit-DHT==1.4.0
-bme280==0.5
-paho-mqtt==1.5.0
-psutil==5.7.2
-pytz==2020.1
-PyYAML==5.3.1
+backports.zoneinfo==0.2.1
+bme280==0.6
+paho-mqtt==1.6.1
+psutil==5.8.0
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
 smbus==1.1.post2
-tzlocal==2.1
+tzdata==2021.5
+tzlocal==4.1
